# Isolla-de-nulla

./: CMakeLists.txt  JustaGuyOnAFarm.sln  README.md
JustaGuyOnAFarm/: Animation.cpp  Animation.h  CMakeLists.txt  CestaMeziDomovemALesem.tmx  JustaGuyOnAFarm.vcxproj  JustaGuyOnAFarm.vcxproj.filters  Player.cpp  Player.h  camera.cpp  camera.h  functions.cpp  hitbox.cpp  hitbox.h  items.cpp  items.h  main.cpp  map.cpp  map.h  materials.h  pugixml.lib  tmxlite-d.lib  tmxlite.lib  view.cpp  view.h
JustaGuyOnAFarm/maps/: domov.tmj  domov.tmx  testmap.tmx
enc_temp_folder/74c7e72aa971428349b5871b1e3ad71/: Player.cpp
